<resources>
    <string name="about_us">关于我们</string>
    <string name="add_dining_table">添加餐桌点位</string>
    <string name="add_dining_table_name">添加桌号</string>
    <string name="add_hostess_time">添加时间</string>
    <string name="add_kitchen_backstage">请先在后台添加厨房点位</string>
    <string name="add_point">增加</string>
    <string name="add_point_backstage">请先在后台添加餐桌点位</string>
    <string name="add_point_upload_remote_token_empty">添加点位上报后台时token为空, 重新请求</string>
    <string name="again_charging">重新充电</string>
    <string name="again_close">请重新关闭</string>
    <string name="alias_name">别名：</string>
    <string name="already_delete">已删除</string>
    <string name="already_exist_point_override">已存在的点位：%1$3s，类型: %2$3s，名称：%3$3s \n \n重新设定的点位：%4$3s ，类型: %5$3s，名称：%6$3s \n</string>
    <string name="already_override">已覆盖</string>
    <string name="already_update">已更新</string>
    <string name="app_bugly_id">350f481a18</string>
    <string name="app_name">希格斯送物</string>
    <string name="app_secret">353247a5938874efbd594ccfed67030f</string>
    <string name="appid">wx2ccfb9516628fa74</string>
    <string name="authority_set">权限设置</string>
    <string name="back_site">返回 %s</string>
    <string name="be_charging">充电中%d%%</string>
    <string name="be_stuck">机器人被困住</string>
    <string name="cancel">取消</string>
    <string name="cancel_task">取消任务</string>
    <string name="catering_chanting_mode">餐饮揽客模式</string>
    <string name="charge_finish">充电完成</string>
    <string name="charging">充电中</string>
    <string name="charging_fail">充电失败</string>
    <string name="charging_pile">充电桩</string>
    <string name="chassis_identification_code">底盘识别码</string>
    <string name="clear_success">清除成功</string>
    <string name="clear_task">清空任务</string>
    <string name="click_cancel">取消</string>
    <string name="click_confirm">确定</string>
    <string name="come_back">我回去啦</string>
    <string name="confirm">连接</string>
    <string name="confirm_delete_point">确定要删除么？\n当前点位：%1$3s，餐桌:%2$3s</string>
    <string name="confirm_hostess_route">确定迎宾路线</string>
    <string name="confirm_route">确定路线</string>
    <string name="cruise">巡游</string>
    <string name="cruise_route">巡游路线</string>
    <string name="cruise_task">巡游任务</string>
    <string name="current_dining_table_name">当前餐桌名:</string>
    <string name="current_region_no_net">当前区域没有无线网络</string>
    <string name="delete_auto_hostess_time">删除自动迎宾时间段</string>
    <string name="delete_confirm">确定删除吗？</string>
    <string name="delete_hostess_point">删除迎宾点</string>
    <string name="delete_point">删除点位</string>
    <string name="delete_point_upload_remote_token_empty">删除点位上报后台时token为空</string>
    <string name="destination_is_empty">所去点位为空</string>
    <string name="device_id">设备ID</string>
    <string name="devices_control">设备开关</string>
    <string name="dining_table">餐桌</string>
    <string name="dining_table_not_empty">餐桌名不能为空！</string>
    <string name="direct_select">直接选择</string>
    <string name="eyes">眼睛</string>
    <string name="finish_take_food">完成取餐</string>
    <string name="first_layer">上层</string>
    <string name="first_service_plate">餐盘 (上)</string>
    <string name="flip_lock">翻盖锁</string>
    <string name="floodlight">照明灯</string>
    <string name="forget">忘记</string>
    <string name="function">功能</string>
    <string name="function_set">功能设置</string>
    <string name="general_signal">一般</string>
    <string name="go_charging_task">回充电任务</string>
    <string name="go_hostess_task">去迎宾任务</string>
    <string name="go_kitchen_task">回厨房任务</string>
    <string name="go_site_usher">前往 %s 领位</string>
    <string name="go_to_first_site_task">前往 上层 %s 送物任务</string>
    <string name="go_to_second_site_task">前往 下层 %s 送物任务</string>
    <string name="hide_navigation_bar">隐藏导航栏</string>
    <string name="host_ip">本机Ip</string>
    <string name="hostess">迎宾</string>
    <string name="hostess_no_exist">迎宾点不存在</string>
    <string name="hostess_point">迎宾点</string>
    <string name="hostess_position">迎宾地点</string>
    <string name="hostess_route">迎宾路线</string>
    <string name="hostess_time">迎宾时间</string>
    <string name="hostess_time_set">迎宾结束时间应该大于开始时间，请重新输入</string>
    <string name="input_alias_name">请输入别名</string>
    <string name="input_connect_ip">请输入连接IP</string>
    <string name="input_password">输入密码</string>
    <string name="input_real_name">请输入点位</string>
    <string name="input_right_ip">请输入正确的ip</string>
    <string name="keyboard_input">键盘输入</string>
    <string name="kitchen">厨房</string>
    <string name="mCurrentMapName_is_empty">mCurrentMapName 为空，正在尝试从新获取</string>
    <string name="mPointToken_is_empty">mPointToken 为空，请检查网络后，重新请求</string>
    <string name="mRobotId_is_empty">mRobotId 为空，正在尝试从新获取</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_route">修改路线</string>
    <string name="net_no_use_check_net">当前网络不可用，请检查你的网络设置</string>
    <string name="net_set">网络设置</string>
    <string name="no_cancel">不取消</string>
    <string name="no_net">网络未连接</string>
    <string name="no_wifi_status">没有获取到WiFi状态</string>
    <string name="not_placed">未放置</string>
    <string name="now_go_charge">我现在要去充电</string>
    <string name="now_map_name">当前地图</string>
    <string name="now_task_count">恭喜今日送物达到 %s 次</string>
    <string name="obtaining_ip">正在获取中...</string>
    <string name="open_camera_fail">打开摄像头失败</string>
    <string name="password_error">密码不对</string>
    <string name="password_length_low">密码长度不够</string>
    <string name="password_length_low_8">密码至少8位</string>
    <string name="password_set_success">密码设置成功！</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_save_charge_pile">请先去后台录入充电桩</string>
    <string name="please_save_kitchen_site">请先录入厨房点位</string>
    <string name="please_select_clear_task">请选择要取消的任务</string>
    <string name="please_select_objective_position">请先选择送物目的餐桌</string>
    <string name="point">.</string>
    <string name="point_already_exist">当前点位已存在</string>
    <string name="point_app_secret">8003aac4e80f990e160181736f0cf372</string>
    <string name="point_appid">higgs-robot-columbus</string>
    <string name="point_is_not_empty">点位不能为空！</string>
    <string name="point_save">点位录入</string>
    <string name="position_no_exist">您输入的桌号不存在，请输入正确的桌号</string>
    <string name="query_point">查询</string>
    <string name="real_name">点位：</string>
    <string name="robot_usher">机器人领位</string>
    <string name="save">保存</string>
    <string name="save_point_success">加入成功</string>
    <string name="say_hello">打招呼</string>
    <string name="search_menu_title">Search</string>
    <string name="second_layer">中间层</string>
    <string name="second_service_plate">餐盘 (下)</string>
    <string name="select_cancel_task">请选择您需要取消的任务</string>
    <string name="select_cruise_route">请先选择巡游路线</string>
    <string name="select_destination">请选择下面你要去的目的地</string>
    <string name="select_hostess_point">选择地点</string>
    <string name="set_cruise_route">设置巡游路线</string>
    <string name="set_interface">设置页面</string>
    <string name="set_num_too_many">设置已到达上线了</string>
    <string name="set_password">设置密码</string>
    <string name="set_route">设置路线</string>
    <string name="set_success">设置成功</string>
    <string name="set_usher_start_position">设置领位开始位置</string>
    <string name="show_navigation_bar">显示导航栏</string>
    <string name="soft_scram">软急停</string>
    <string name="start_cruise">开始巡游</string>
    <string name="start_delivery">开始配送</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="strong_signal">强</string>
    <string name="sync_fail">同步失败</string>
    <string name="sync_success">同步成功</string>
    <string name="system_tip">系统提示</string>
    <string name="take_food_finish">取餐完成</string>
    <string name="task_count">%d 次</string>
    <string name="third_layer">下层</string>
    <string name="today_task_count">今日任务：</string>
    <string name="touch_sensing_element">触摸传感器</string>
    <string name="ultraviolet_lamp">紫外线消毒灯</string>
    <string name="unlock">解 锁</string>
    <string name="update_already_exist_point">当前点位: %1$3s，类型: %2$3s，名称:%3$3s \n</string>
    <string name="usher">领位</string>
    <string name="usher_alias_point_not_exist">该领位点别名不存在</string>
    <string name="usher_point_empty">领位点为空，请选择</string>
    <string name="usher_position">领位点</string>
    <string name="usher_position_set">地点设置</string>
    <string name="usher_real_point_not_exist">该领位真正的点位不存在</string>
    <string name="usher_start_position_set">领位初始位置设置</string>
    <string name="ventilator">排风扇</string>
    <string name="version_number">版本号：</string>
    <string name="version_para_fail">获取失败</string>
    <string name="versions">版本</string>
    <string name="visit_limit">访问权限</string>
    <string name="visit_restrict">访问限制</string>
    <string name="visit_restrict_password">访问限制密码</string>
    <string name="voice_interaction">语音交互</string>
    <string name="volume_set">声音设置</string>
    <string name="wait_moment">正在操作，请稍等</string>
    <string name="weak_signal">弱</string>
    <string name="wifi_close">关闭 WIFI</string>
    <string name="wifi_closed">Wifi已经关闭</string>
    <string name="wifi_closed_not_again_close">亲，Wifi已经关闭，不用再关了</string>
    <string name="wifi_closing">Wifi正在关闭</string>
    <string name="wifi_freq">频率</string>
    <string name="wifi_ip">IP地址</string>
    <string name="wifi_no_open">WiFi没有开启</string>
    <string name="wifi_no_open_no_scan">WiFi没有开启，无法扫描</string>
    <string name="wifi_open">打开 WIFI</string>
    <string name="wifi_opened">Wifi已经开启</string>
    <string name="wifi_opening">Wifi正在开启</string>
    <string name="wifi_opening_later_check">wifi正在开启，请稍后扫描</string>
    <string name="wifi_opening_not_again_open">亲，Wifi正在开启，不用再开了</string>
    <string name="wifi_signal">信号强</string>
    <string name="wifi_state_unknow">WIFI 状态未知</string>
    <string name="work_no_disturbing">工作免打扰模式</string>
</resources>