<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f6f8"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_point_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_point_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/point_save"
            android:textColor="@color/color_bg_051854"
            android:textSize="@dimen/font_24" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_control"
        android:layout_width="294dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_title"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="18dp"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_tableAliasName"
            style="@style/PointAddTextStyle"
            android:hint="@string/input_alias_name" />

        <EditText
            android:id="@+id/et_tablePoint"
            style="@style/PointAddTextStyle"
            android:hint="@string/input_real_name" />

        <RadioGroup
            android:id="@+id/rg_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb1"
                style="@style/PointRadioStyle"
                android:checked="true"
                android:text="@string/dining_table" />

            <RadioButton
                android:id="@+id/rb2"
                style="@style/PointRadioStyle"
                android:layout_marginTop="13dp"
                android:text="@string/kitchen" />

            <RadioButton
                android:id="@+id/rb3"
                style="@style/PointRadioStyle"
                android:layout_marginTop="13dp"
                android:text="@string/charging_pile" />
        </RadioGroup>

        <Button
            android:id="@+id/bt_add"
            android:layout_width="246dp"
            android:layout_height="74dp"
            android:layout_marginTop="13dp"
            android:background="@mipmap/point_bt"
            android:text="@string/add_point"
            android:textColor="#ffffff"
            android:textSize="@dimen/font_30" />

        <Button
            android:id="@+id/bt_sync"
            android:layout_width="246dp"
            android:layout_height="74dp"
            android:layout_marginTop="13dp"
            android:background="@mipmap/point_sync" />

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/query_point"
            android:textSize="70sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/input_real_name"
            android:visibility="gone" />

        <Button
            android:id="@+id/bt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/query_point"
            android:textSize="30sp"
            android:visibility="gone" />
    </LinearLayout>

    <GridView
        android:id="@+id/gv_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_title"
        android:layout_marginTop="16dp"
        android:layout_marginRight="22dp"
        android:layout_toRightOf="@+id/rl_control"
        android:fadeScrollbars="true"
        android:horizontalSpacing="5dp"
        android:listSelector="@color/translucent"
        android:numColumns="5"
        android:verticalSpacing="10dp" />
</RelativeLayout>
