<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="208dp"
    android:layout_height="160dp">

    <LinearLayout
        android:id="@+id/rl_layout"
        android:layout_width="208dp"
        android:layout_height="160dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#44a1fc"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/charging_pile"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="horizontal">

            <TextView
                style="@style/PointGridItemStyle"
                android:text="@string/alias_name" />

            <TextView
                android:id="@+id/tv_alias"
                style="@style/PointGridItemNameStyle"
                android:text="餐桌1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="horizontal">

            <TextView
                style="@style/PointGridItemStyle"
                android:text="@string/real_name" />

            <TextView
                android:id="@+id/tv_point"
                style="@style/PointGridItemNameStyle"
                android:text="101dsdadadasdasdadsad" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
